# server/app/constants/db.ts
@@ -1,0 +1,11 @@
+export const DB_HOST = '';
+export const DB_NAME = '';
+export const DB_USERNAME = '';
+export const DB_PASSWORD = '';
+
+export const TABLES = {
+    USERS: 'users',
+    SUBSCRIPTIONS: 'subscriptions',
+    VIDEOSTANDS: 'videostands',
+    MEDIA: 'media'
+};
