# server/app/types/MediaType/index.ts
@@ -1,0 +1,15 @@
+export enum MediaTypes {
+    PICTURE = 'picture',
+    VIDEO = 'video'
+}
+
+export type TMedia = {
+    id: number;
+    title?: string;
+    description?: string;
+    duration?: number;
+    imgURI: string;
+    type: MediaTypes;
+    order: number;
+    isActive: boolean;
+}
